initla commit - hot reload should be working

--- a/package.json
+++ b/package.json
@@ -2,18 +2,27 @@
   "name": "web",
   "version": "1.0.0",
   "description": "",
-  "main": "index.html",
+  "private": true,
   "dependencies": {
-    "lodash": "^4.17.5",
+    "lodash": "^4.17.10",
     "webpack": "^4.0.1"
   },
   "devDependencies": {
+    "clean-webpack-plugin": "^0.1.19",
+    "css-loader": "^0.28.11",
+    "file-loader": "^1.1.11",
+    "html-webpack-harddisk-plugin": "^0.2.0",
+    "html-webpack-plugin": "^3.2.0",
+    "style-loader": "^0.21.0",
     "webpack": "^4.0.1",
-    "webpack-cli": "^2.0.10"
+    "webpack-cli": "^2.0.10",
+    "webpack-dev-server": "^3.1.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack --config webpack.config.js"
+    "start": "webpack-dev-server --open --hot",
+    "watch": "webpack --watch",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
