--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "private": true,
   "dependencies": {
+    "chartist": "^0.11.0",
     "lodash": "^4.17.10",
+    "vue": "^2.5.17",
+    "vue-loader": "^14.2.2",
+    "vue-template-compiler": "^2.5.17",
     "webpack": "^4.0.1"
   },
   "devDependencies": {
