--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "private": true,
   "dependencies": {
     "chartist": "^0.11.0",
+    "css-hot-loader": "^1.4.2",
+    "extract-text-webpack-plugin": "^3.0.2",
     "lodash": "^4.17.10",
     "vue": "^2.5.17",
     "vue-loader": "^14.2.2",
-    "vue-template-compiler": "^2.5.17",
-    "webpack": "^4.0.1"
+    "vue-template-compiler": "^2.5.17"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^0.1.19",
@@ -17,8 +18,10 @@
     "file-loader": "^1.1.11",
     "html-webpack-harddisk-plugin": "^0.2.0",
     "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.9.3",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.21.0",
-    "webpack": "^4.0.1",
+    "webpack": "^4.18.0",
     "webpack-cli": "^2.0.10",
     "webpack-dev-server": "^3.1.4"
   },
